(executable
 (public_name pipeline)
 (package pipeline)
 (libraries bos cmdliner current current.fs current_docker current_git
   current_github current_slack current_web dockerfile fmt.cli fmt.tty logs
   logs.cli logs.fmt prometheus rresult uri curly yojson ppx_deriving_yojson)
   (preprocess (pps ppx_deriving_yojson)) 
)
